--- a/FlowerShopWindowsForm/FlowerShopWindowsForm/FlowerShopWindowsForm.csproj
+++ b/FlowerShopWindowsForm/FlowerShopWindowsForm/FlowerShopWindowsForm.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -112,6 +113,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Web References\Service\WebService1.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\7855751_stock-photo-colorful-tulips.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\fototapet-lalele-galbene.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
